--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     
+    {%include "includes/navbar.html"%}
+
     <div style ="margin-top:100px;" class = "container" >
         {% block body %}
         
