--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -7,5 +7,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis unde perspiciatis, nisi deserunt ullam minima fugit quia et nemo repudiandae odio accusamus consequuntur aliquid architecto cum provident voluptate ea consequatur.</p>
 
 </div>
+<ul>
+{% for number in numbers  %}
+        <li>{{number}}</li>
 
+{% endfor %}
+</ul>
 {% endblock body %}
