--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -5,4 +5,14 @@
 <h3>Kayıt Ol</h3>
 
 <hr>
+
+<form method="POST">
+    {{form.as_p}}
+    <br>
+
+    <button type="submit" class="btn btn-danger">Kayıt Ol</button>
+
+
+
+</form>
 {% endblock body %}
