--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+{% csrf_token %}
+
 <div class ="jumbotron text-center">
         <h3>Bloğa Hoş Geldiniz</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis unde perspiciatis, nisi deserunt ullam minima fugit quia et nemo repudiandae odio accusamus consequuntur aliquid architecto cum provident voluptate ea consequatur.</p>
