--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -5,4 +5,20 @@
 <h3>Giriş Yap</h3>
 <hr>
 
+<div class="row">
+    <div class="col-md-6 offset-md-3">
+
+        <form method="post">
+            {% csrf_token %}
+
+            {{form.as_p}}
+            <br>
+            <button type="submit" class="btn btn-danger">Giriş Yap</button>
+
+        </form>
+
+
+    </div>
+  </div>
+
 {% endblock body %}
