--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -2,16 +2,19 @@
 
 {% block body %}
 
-<h3>Giriş Yap</h3>
-<hr>
+{% load crispy_forms_tags %}
 
 <div class="row">
     <div class="col-md-6 offset-md-3">
 
+            <h3>Giriş Yap</h3>
+            <hr>
+
+            
         <form method="post">
             {% csrf_token %}
 
-            {{form.as_p}}
+            {{form|crispy}}
             <br>
             <button type="submit" class="btn btn-danger">Giriş Yap</button>
 
