--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -2,20 +2,25 @@
 
 {% block body %}
 
-<h3>Kayıt Ol</h3>
+{% load crispy_forms_tags %}
 
-<hr>
+<div class="row">
+    <div class="col-md-6 offset-md-3">
 
-<form method="POST">
+            <h3>Kayıt Ol</h3>
+            <hr>
 
-   {% csrf_token %}
+            
+        <form method="post">
+            {% csrf_token %}
 
-    {{form.as_p}}
-    <br>
+            {{form|crispy}}
+            <br>
+            <button type="submit" class="btn btn-danger">Kayıt Ol</button>
 
-    <button type="submit" class="btn btn-danger">Kayıt Ol</button>
+        </form>
 
 
-
-</form>
+    </div>
+  </div>
 {% endblock body %}
