--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -10,4 +10,14 @@
 
 </div>
 
+<p>
+        {% if request.user.is_authenticated %}
+                Giriş Yapılmış, {{request.user.username}}
+        {% else %}
+                Giriş Yapılmamış.
+        {% endif %}
+
+
+</p>
+
 {% endblock body %}
