--- a/blog/templates/includes/navbar.html
+++ b/blog/templates/includes/navbar.html
@@ -16,9 +16,28 @@
           </ul>
 
           <ul class="navbar-nav ml-auto">
+          
+         
+          {% if request.user.is_authenticated %}
 
-            
+          <li class="nav-item active">
+              <a class="nav-link" href="/articles/dashboard">Kontrol Paneli</span></a></li>
+          <li class="nav-item active">
+              <a class="nav-link" href="/user/logout">Çıkış Yap</span></a></li> 
+
+
+          {% else %}
+          <li class="nav-item active">
+              <a class="nav-link" href="/user/login">Giriş Yap</span></a></li>
         
+
+          {% endif %}
+          <li class="nav-item active">
+              <a class="nav-link" href="/user/register">Kayıt Ol</span></a></li>
+      
+       
+            
+       </ul>
           
         </div>
       </nav>
