--- a/blog/templates/dashboard.html
+++ b/blog/templates/dashboard.html
@@ -14,6 +14,48 @@
     <a class="btn btn-danger" href="/articles/addarticle">Makale Ekle</a>
     <hr>
 
+    {% if articles %}
+
+    <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">id</th>
+                <th scope="col">Başlık</th>
+                <th scope="col">Yazar</th>
+                <th scope="col">Oluşturma Tarihi</th>
+                <th scope="col">Güncelle</th>
+                <th scope="col">Sil</th>
+              </tr>
+            </thead>
+            <tbody>
+    
+                {% for article in articles  %}
+                <tr>
+                        <th scope="row">{{article.id}}</th>
+                        <td> <a href="/articles/article/{{article.id}}">{{article.title}}</a></td>
+                        <td>{{article.author.username}}</td>
+                        <td>{{article.created_date}}</td>
+                        <td><a  href="/articles/update/{{article.id}}" class="btn btn-danger">Güncelle</a></td>
+                        <td><a href="/articles/delete/{{article.id}}" class="btn btn-danger">Sil</a></td>
+                      </tr>
+    
+    
+                {% endfor %}
+            </tbody>
+          </table>
+
+
+
+    {% else %}
+
+    <div class="alert alert-danger">
+        Henüz Bir Makaleniz Bulunmuyor
+    </div>
+    {% endif %}
+
+    
+
+
 
 {% endblock body %}
 
