--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -6,21 +6,17 @@
 
 <div class="row">
     <div class="col-md-6 offset-md-3">
-
-            <h3>Kayıt Ol</h3>
-            <hr>
-
-            
-        <form method="post">
+        <h3>Kayıt Ol</h3>
+        <hr>
+        <form method = "post">
             {% csrf_token %}
-
+            
             {{form|crispy}}
             <br>
-            <button type="submit" class="btn btn-danger">Kayıt Ol</button>
-
+            <button type = "submit" class = "btn btn-danger">Giriş Yap</button>
         </form>
-
-
     </div>
   </div>
+
 {% endblock body %}
+
