--- a/blog/templates/addarticle.html
+++ b/blog/templates/addarticle.html
@@ -13,7 +13,7 @@
             
         <form method="post">
             {% csrf_token %}
-
+            {{ form.media}}
             {{form|crispy}}
             <br>
             <button type="submit" class="btn btn-danger">Makale Oluştur</button>
