--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -24,13 +24,19 @@
           <hr>
     
           <!-- Preview Image -->
-          <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+         {% if article.article_image  %}
+         <img class="img-fluid rounded" src="{{article.article_image.url}}" alt ="">
+         {% else %}
+         {% endif %}
+            
+   
+         
     
           <hr>
     
           <!-- Post Content -->
           <p class="lead"> 
-              {{article.content}}
+              {{article.content|safe}}
          </p>
           <hr>
     
