--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -29,9 +29,7 @@
          {% else %}
          {% endif %}
             
-   
-         
-    
+
           <hr>
     
           <!-- Post Content -->
@@ -41,7 +39,7 @@
           <hr>
     
         
-        
+        </div>
       </div>
 
 
