--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -38,7 +38,8 @@
         </div>
         <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js'%}"></script>
-    
+        <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+
       
     </body>
 </html>
