--- a/blog/templates/articles.html
+++ b/blog/templates/articles.html
@@ -6,10 +6,23 @@
     
 <div class="row">
     <div class="col-md-10 offset-md-3">
+            <div class="col-lg-8">
             <h3> Makaleler</h3>
             <hr>
-        
+            </div>
         </div> 
+</div>
+
+<div class ="row">
+        <div class="col-md-10 offset-md-3">
+            <div class="col-lg-8">
+                <form>
+                     {% csrf_token %} 
+                    <input type="text" name = "keyword" class="input-sm" maxlength="64" placeholder="Ara...">
+                  <button type="submit" class="btn btn-danger">Ara</button>
+                </form>
+          </div>
+        </div>    
 </div>
 
 
@@ -64,7 +77,7 @@
 
 
     {% else %}
-        <div class="alert alert-danger">Bu blokta herhangi bir makale bulunmuyor.</div>
+        <div class="alert alert-danger">Makale Bulunamadı</div>
     {% endif %}
 
 {% endblock body %}
