--- a/blog/templates/articles.html
+++ b/blog/templates/articles.html
@@ -36,7 +36,7 @@
         <div class="col-lg-8">
     
           <!-- Title -->
-         <a href="/articles/article/{{article.id}}"><h2 class="mt-4">{{article.title}}</h2></a> 
+         <a href="{% url 'article:detail' article.id %}"><h2 class="mt-4">{{article.title}}</h2></a> 
     
           <!-- Author -->
           <p class="lead">
@@ -53,7 +53,7 @@
     
           <!-- Preview Image -->
          {% if article.article_image  %}
-         <a href="/articles/article/{{article.id}}"><img class="img-fluid rounded" src="{{article.article_image.url}}" alt ="">
+         <a href="{% url 'articles:article' article.id %}""><img class="img-fluid rounded" src="{{article.article_image.url}}" alt ="">
          </a> {% else %}
          {% endif %}
             
