--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -38,9 +38,31 @@
          </p>
           <hr>
     
-        
+        <!-- Comments Form -->
+      <div class="card my-4">
+        <h5 class="card-header">Yorum Ekle</h5>
+        <div class="card-body">
+          <form method="post" action="/articles/comment/{{article.id}}">
+            {% csrf_token %}
+              <div class="form-group">
+                  <label for="formGroupExampleInput">İsim</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="İsminizi Girin">
+                </div>
+            <div class="form-group">
+
+                <label for="formGroupExampleInput">Yorum</label>
+              <textarea class="form-control" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Ekle</button>
+          </form>
         </div>
       </div>
+        </div>
+        
+      </div>
+
+      
+
 
 
 {% endblock body %}
