--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -46,12 +46,12 @@
             {% csrf_token %}
               <div class="form-group">
                   <label for="formGroupExampleInput">İsim</label>
-                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="İsminizi Girin">
+                  <input name="comment_author" type="text" class="form-control" id="formGroupExampleInput" placeholder="İsminizi Girin">
                 </div>
             <div class="form-group">
 
                 <label for="formGroupExampleInput">Yorum</label>
-              <textarea class="form-control" rows="3"></textarea>
+              <textarea name="comment_content" class="form-control" rows="3"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Ekle</button>
           </form>
